syntax = "proto3";

package inventory;

option go_package = "consumer-service/proto";

service InventoryService {
    rpc UpdateProduct (ProductRequest) returns (ProductResponse);
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
    rpc ReserveStock (ReserveRequest) returns (ReserveResponse); // New method
}
message ReserveRequest {
    string product_id = 1;
    int32 quantity = 2;
}
message ReserveResponse {
    bool success = 1;
    string message = 2;
}
message ProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string category = 6;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int32 stock = 5;
    string category = 6;
}

message GetProductRequest {
    string id = 1;
}


