syntax = "proto3";

package order;

option go_package = "producer-service/proto";

service OrderService {
    rpc ListOrders (ListOrdersRequest) returns (stream ListOrdersResponse);
    rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message ListOrdersRequest {
    string user_id = 1;
    string status = 2;
    double min_price = 3;
    double max_price = 4;
    int32 page = 5;
    int32 limit = 6;
    int64 created_after = 7;  // New field
}

message OrderResponse {
    string id = 1;
    string user_id = 2;
    repeated OrderItem items = 3;
    double total = 4;
    string status = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
    double price = 3;
}

message ListOrdersResponse {
    repeated OrderResponse orders = 1;
}

message UpdateOrderStatusRequest {
    string id = 1;
    string status = 2;
}

message UpdateOrderStatusResponse {
    bool success = 1;
}